{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 47,
  "lineage": "23c8e19d-8958-41a2-dfdc-a8adbb8b5114",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d424e1225e89205e",
            "arn": "arn:aws:ec2:us-east-1:526860034893:elastic-ip/eipalloc-0d424e1225e89205e",
            "association_id": "eipassoc-064ebf3a0baa253b2",
            "domain": "vpc",
            "id": "eipalloc-0d424e1225e89205e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08a27fb34700e880c",
            "private_dns": "ip-10-0-1-245.ec2.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-3-86-171-48.compute-1.amazonaws.com",
            "public_ip": "3.86.171.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "connectivity-nat-eip"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "connectivity-nat-eip",
              "Project": "terraform-multi-env"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:526860034893:instance/i-0a63005c4707827ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a63005c4707827ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "connectivity-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd7f232d06445883",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d1f34e4203682ff6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f3af4b02d8cb1a3",
            "tags": {
              "Environment": "connectivity",
              "Name": "bastion-host"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "bastion-host",
              "Project": "terraform-multi-env"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5f6a1daab979508"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "connectivity_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:internet-gateway/igw-0de7517bcf88cc6f8",
            "id": "igw-0de7517bcf88cc6f8",
            "owner_id": "526860034893",
            "tags": {
              "Name": "connectivity-igw"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "connectivity-igw",
              "Project": "terraform-multi-env"
            },
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "connectivity_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d424e1225e89205e",
            "association_id": "eipassoc-064ebf3a0baa253b2",
            "connectivity_type": "public",
            "id": "nat-032a43b353930abb7",
            "network_interface_id": "eni-08a27fb34700e880c",
            "private_ip": "10.0.1.245",
            "public_ip": "3.86.171.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f3af4b02d8cb1a3",
            "tags": {
              "Environment": "connectivity",
              "Name": "connectivity-nat"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "connectivity-nat",
              "Project": "terraform-multi-env"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.connectivity_igw",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f868d95c018b2fd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-032a43b353930abb7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f868d95c018b2fd7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.connectivity_igw",
            "aws_nat_gateway.connectivity_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:route-table/rtb-0f868d95c018b2fd7",
            "id": "rtb-0f868d95c018b2fd7",
            "owner_id": "526860034893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-032a43b353930abb7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "private-rt",
              "Project": "terraform-multi-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:route-table/rtb-0fbd06e3ba8357de2",
            "id": "rtb-0fbd06e3ba8357de2",
            "owner_id": "526860034893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de7517bcf88cc6f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "public-rt",
              "Project": "terraform-multi-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connectivity_igw",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b9e836aa73a1d23",
            "route_table_id": "rtb-0f868d95c018b2fd7",
            "subnet_id": "subnet-02b8ba22fb6737f76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_az1",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4a1d73b73e04da",
            "route_table_id": "rtb-0f868d95c018b2fd7",
            "subnet_id": "subnet-01dfb529b0911ec7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_az2",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7c10bea5924f27c",
            "route_table_id": "rtb-0fbd06e3ba8357de2",
            "subnet_id": "subnet-03f3af4b02d8cb1a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connectivity_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096d4adfb8205d7d5",
            "route_table_id": "rtb-0fbd06e3ba8357de2",
            "subnet_id": "subnet-0f1877a10816ad282"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connectivity_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:security-group/sg-0b5f6a1daab979508",
            "description": "Bastion access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5f6a1daab979508",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "526860034893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "connectivity",
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "bastion-sg",
              "Project": "terraform-multi-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:subnet/subnet-02b8ba22fb6737f76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b8ba22fb6737f76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "526860034893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az1"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-az1",
              "Project": "terraform-multi-env"
            },
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:subnet/subnet-01dfb529b0911ec7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dfb529b0911ec7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "526860034893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az2"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-az2",
              "Project": "terraform-multi-env"
            },
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:subnet/subnet-03f3af4b02d8cb1a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f3af4b02d8cb1a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "526860034893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az1"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-az1",
              "Project": "terraform-multi-env"
            },
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:subnet/subnet-0f1877a10816ad282",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1877a10816ad282",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "526860034893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az2"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-az2",
              "Project": "terraform-multi-env"
            },
            "vpc_id": "vpc-07d9cd9f11dc7928c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "connectivity_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526860034893:vpc/vpc-07d9cd9f11dc7928c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0515f453b8fb561f4",
            "default_route_table_id": "rtb-0356b3717113b4942",
            "default_security_group_id": "sg-0054a1f9ac7ec4072",
            "dhcp_options_id": "dopt-0942dd927f2c38d93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d9cd9f11dc7928c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0356b3717113b4942",
            "owner_id": "526860034893",
            "tags": {
              "Environment": "connectivity",
              "Name": "connectivity-vpc"
            },
            "tags_all": {
              "Environment": "connectivity",
              "ManagedBy": "Terraform",
              "Name": "connectivity-vpc",
              "Project": "terraform-multi-env"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}